--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.35",
     "expo-status-bar": "~2.0.1",
+    "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
     "react-native": "0.76.7"
   },
