--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "MMA301_Project",
-    "slug": "MMA301_Project",
+    "name": "assignment-project",
+    "slug": "assignment-project",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
