--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mma301_project",
+  "name": "assignment-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.35",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "crypto-js": "^4.2.0",
+    "expo": "~52.0.37",
+    "expo-checkbox": "^4.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
