Revert "Merge branch 'Thuc'"
This reverts commit 7f28ac5b6a469d5f8fec2c97e6d283b39ebdb23c, reversing
changes made to 350005e15179d017ad3f5575de9c84629afa1987.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "assignment-project",
-    "slug": "assignment-project",
+    "name": "MMA301_Project",
+    "slug": "MMA301_Project",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
