--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-project",
+  "name": "mma301_project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "crypto-js": "^4.2.0",
-    "expo": "~52.0.37",
-    "expo-checkbox": "^4.0.1",
-    "expo-linear-gradient": "^14.0.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -24,10 +18,7 @@
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-fs": "^2.20.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native": "0.76.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
