--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
+    "emailjs-com": "^3.2.0",
     "expo": "~52.0.35",
+    "expo-checkbox": "^4.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
