--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
