--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "emailjs-com": "^3.2.0",
     "expo": "~52.0.35",
     "expo-checkbox": "^4.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
+    "expo-location": "~18.0.8",
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
-    "react-native": "0.76.7",
-    "expo-image-picker": "~16.0.6",
-    "expo-location": "~18.0.8"
+    "react-native": "0.76.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
