--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
-    "react": "18.3.1",
-    "react-native": "0.76.7"
+    "@emailjs/browser": "*",
+    "@expo/vector-icons": "^14.0.2",
+    "react-native-screens": "~4.4.0",
+    "react-native-pager-view": "6.5.1",
+    "react-native-vector-icons": "10.2.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-vector-icons/Ionicons": "*",
+    "@react-navigation/material-top-tabs": "*",
+    "react-native-vector-icons/MaterialIcons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
