--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "react-native-vector-icons": "10.2.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-vector-icons/Ionicons": "*",
-    "@react-navigation/material-top-tabs": "*",
-    "react-native-vector-icons/MaterialIcons": "*"
+    "@react-navigation/material-top-tabs": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
