--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@emailjs/browser": "*",
-    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.1",
@@ -22,15 +19,17 @@
     "emailjs-com": "^3.2.0",
     "expo": "~52.0.35",
     "expo-checkbox": "^4.0.1",
-    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "json-server": "^1.0.0-beta.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "6.5.1",
-    "react-native-safe-area-context": "4.12.0",
+    "@emailjs/browser": "*",
+    "@expo/vector-icons": "^14.0.2",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "10.2.0"
+    "react-native-pager-view": "6.5.1",
+    "react-native-vector-icons": "10.2.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "@react-navigation/material-top-tabs": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
